...
            onAction(UserListAction.OnSortIconClick)
        },
        startIcon = painterResource(resource = if (sortAscending) Res.drawable.sort_ascending else Res.drawable.sort_descending),
        contentPadding = PaddingValues(vertical = 10.dp, horizontal = 4.dp),
        iconTint = Color.White,
        buttonColor = MaterialTheme.colorScheme.secondary,
        contentDescription = "Sort button icon"
    )
}
